<resources>
    <string name="app_name">ScreenSnip</string>
    <string name="directory_name" translatable="false">ScreenSnip</string>
    <string name="notification_channel_id" translatable="false">happenstance.projsc</string>
    <string name="shared_preference_name" translatable="false">com.happenstance.ldp</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="switch_preference_snipping_tool_on_summary">Crop after full screen capture</string>
    <string name="switch_preference_snipping_tool_off_summary">Full screen capture only</string>
    <string name="switch_preference_status_bar_on_summary">Show status bar in capture</string>
    <string name="switch_preference_status_bar_off_summary">Hide status bar in capture</string>
    <string name="switch_preference_navigation_bar_on_summary">Show navigation bar in capture</string>
    <string name="switch_preference_navigation_bar_off_summary">Hide navigation bar in capture</string>
    <string name="admob_app_id">ca-app-pub-9779268358429578~1044973803</string>
    <string name="banner_ad_id">ca-app-pub-9779268358429578/6626882860</string>
    <string name="interstitial_ad_id">ca-app-pub-9779268358429578/1773995528</string>
    <string name="settings_button_opacity_key">button_opacity</string>
    <string name="settings_button_size_key">button_size</string>
    <string name="settings_button_color_key">button_color</string>
    <string name="settings_image_quality_key">image_quality</string>
    <string name="settings_image_compression_format_key">image_compression_format</string>
    <string name="settings_switch_snip_key">switch_snip</string>
    <string name="settings_about_app_key">about_app</string>
    <string name="developer_email">happenstance.dev@gmail.com</string>
    <string name="settings_switch_status_bar">switch_status_bar</string>
    <string name="settings_switch_navigation_bar">switch_navigation_bar</string>

    <string-array name="pref_button_colors">
        <item>Default</item>
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Navy</item>
        <item>Purple</item>
    </string-array>

    <string-array name="pref_button_size">
        <item>Extra Large</item>
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
        <item>Extra Small</item>
    </string-array>

    <string-array name="pref_image_file_type">
        <item>PNG</item>
        <item>JPG</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--<string-array name="pref_image_file_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>-->
</resources>